Restricciones en la seleccion de personajes y cambio a fase 3

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,8 @@
     border: 0.5em solid yellow;
     transition: 0.5s;
 }
+
+.seleccionado{
+    border: 0.5em solid red;
+    transition: 0.5s;
+}
