--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,12 @@
     padding: 0em;
 }
 
+
 .secvis {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: black;
     width: 100vw;
     height: 100vh;
@@ -37,4 +42,39 @@
 .seleccionado{
     border: 0.5em solid red;
     transition: 0.5s;
+}
+
+.maquetaEquipos {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    width: 100vw;
+    height: 100vh;
+}
+
+.teamCharacters {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    height: 28em;
+    width: 15em;
+    margin: 6em;
+}
+
+/* .fightPanel{
+
+    width: 5em;
+    height: 8em;
+
+} */
+
+
+
+.fotoVersus {
+    width: 30em;
+    height: 18em;
 }
